--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1>Introducing Fiverr's Fashion Store</h1>
         <b>By Yonat Rauner Trieger  |</B>
         <Span> December 10, 2020</Span> <br>
-         <img width="500" src="./6070b088d6dc711209719d2a_1200x600-Blog_1.jpeg" alt="">
+         <img width="500" src="./images/6070b088d6dc711209719d2a_1200x600-Blog_1.jpeg" alt="">
          <p>Do you dream of creating your own fashion business but aren't sure where to start? Or perhaps your fashion design studio is already up and running, but you need outsourced support to increase revenue and scale up?
 
             Now you can use Fiverr's new Fashion Design services to grow your business from idea to implementation.
@@ -51,8 +51,8 @@
                 </ul>
             <p>Are you ready to grow as a fashion business? Explore Fiverr’s Fashion Store and services, choose the professional you'd like to work with, and get started today.</p>
             <a href="">
-                <img width="30" src="./download.png" alt="">
-                <img width="30" src="./download-1.png" alt="">
+                <img width="30" src="./images/download.png" alt="">
+                <img width="30" src="./images/download-1.png" alt="">
             </a>
     </body>
 <hr>
